jlamontSC-test/src/objects/Mobile_Integration__c.object
<CustomObject>
    <description>Record the data and time of the last integrations between CORE and Mobile Commons and between Mobile Commons and CORE.  Store the Opt-In Path Id used to subscribe Mobile Commons profiles to Sierra Club campaigns in Mobile Commons.</description>
    <fields>
        <fullName>CORE_to_Mobile_Contacts__c</fullName>
        <description>The number of contacts sent from CORE to Mobile Commons in the last session of SF2Mobile-Profile.</description>
        <inlineHelpText>Updated by SF2Mobile-Profile.</inlineHelpText>
        <label>CORE to Mobile Contacts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_CORE_To_Mobile_Date__c</fullName>
        <description>Date and time integration from CORE into Mobile Commons started. Used by CORE to Mobile Commons Castiron orchestration in selection criteria of integration requests updated since that datetime.</description>
        <inlineHelpText>SF2Mobile-Profile updates this field at its conclusion with the time that it started running and began its selection of Mobile Integration Requests.</inlineHelpText>
        <label>Last CORE To Mobile Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Mobile_To_CORE_Date__c</fullName>
        <description>Date and time integration from Mobile Commons to CORE started. Used by CORE to Mobile Commons Castiron orchestration in selection criteria of profiles updated since that datetime.</description>
        <inlineHelpText>Mobile2SF-ProfileStatus updates this field at its conclusion with the time it started.</inlineHelpText>
        <label>Last Mobile To CORE Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_To_CORE_Profiles__c</fullName>
        <description>The number of profile status records sent from Mobile Commons to CORE the last time Mobile2SF-ProfileStatus ran.</description>
        <inlineHelpText>This is updated by Mobile2SF-ProfileStatus when it finishes.</inlineHelpText>
        <label>Mobile To CORE Profiles</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opt_In_Path_Id__c</fullName>
        <description>This value is a key used to subscribe Mobile Commons profiles to Sierra Club text message campaigns.</description>
        <inlineHelpText>In Mobile Commons this name of this value is KW Opt-in Path.</inlineHelpText>
        <label>Opt In Path Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_CORE_To_Mobile_Date__c</fullName>
        <description>Date and time second to last integration from CORE into Mobile Commons started.</description>
        <inlineHelpText>SF2Mobile-Profile updates this field copying the &quot;last&quot; value to the &quot;previous&quot; value.</inlineHelpText>
        <label>Previous CORE To Mobile Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Previous_Mobile_to_CORE_Date__c</fullName>
        <description>Date and time of previous integration from Mobile Commons to CORE started.</description>
        <inlineHelpText>Mobile2SF-ProfileStatus updates this by copying the &quot;last&quot; integration date to the &quot;previous&quot; integration date.</inlineHelpText>
        <label>Previous Mobile to CORE Date</label>
        <type>DateTime</type>
    </fields>
    <label>Mobile Integration</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CORE_to_Mobile_Contacts__c</columns>
        <columns>Last_CORE_To_Mobile_Date__c</columns>
        <columns>Last_Mobile_To_CORE_Date__c</columns>
        <columns>Mobile_To_CORE_Profiles__c</columns>
        <columns>Previous_CORE_To_Mobile_Date__c</columns>
        <columns>Previous_Mobile_to_CORE_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mobile Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobile Integrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>